@@ -4,5 +4,10 @@
 # rules file to build on lucid as well. Thus the branching logic.
 WITH_PYTHON2 = $(shell test -f /usr/bin/dh_python2 && echo "--with python2")
 
+override_dh_auto_build:
+	# Check syntax
+	pep8 --verbose --repeat --ignore W191,E501 *.py bin/*
+	dh_auto_build
+
 %:
 	dh $@ ${WITH_PYTHON2}
